sửa bài viết cho mượt

--- a/data/blog/tim-hieu-ve-webpack/lap-trinh-babel.mdx
+++ b/data/blog/tim-hieu-ve-webpack/lap-trinh-babel.mdx
@@ -99,7 +99,7 @@ module.exports = function (api) {
 }
 ```
 
-Ta cũng bắt đầu bằng plugin không làm gì first-plugin.js:
+Tạo file first-plugin.js với templtate như sau:
 
 ```js
 /**
@@ -113,4 +113,4 @@ module.exports = function (babel) {
 }
 ```
 
-Vậy là bạn đã có template ban đầu để đi xây dựng plugin Babel.
+Từ bây giờ chúng ta có thể xây dựng plugin Babel!
