sử dụng component cho công thức

--- a/data/blog/tim-hieu-ve-webpack/lap-trinh-babel.mdx
+++ b/data/blog/tim-hieu-ve-webpack/lap-trinh-babel.mdx
@@ -8,9 +8,13 @@ summary: Tạo plugin Babel để biên dịch mã Javascript
 
 # Phần I. Template
 
-Công thức là template gồm:
-+ webpack
-+ babel
+<Section>
+  <Heading>Công thức là template gồm:</Heading>
+  <List>
+    <ListItem>webpack</ListItem>
+    <ListItem>babel</ListItem>
+  </List>
+</Section>
 
 webpack là công cụ đóng gói các module, nó nhận các mã nguồn, assets như svg, ảnh, ... và sau các quá trình xử lí sẽ cho ra mã được tối ưu hoá để chạy ở môi trường production.
 
