them vao sourcecode

--- a/data/blog/tao-form-dang-ky-voi-css.mdx
+++ b/data/blog/tao-form-dang-ky-voi-css.mdx
@@ -6,9 +6,11 @@ draft: false
 summary: Tạo form đăng ký đơn giản bằng CSS
 ---
 
+Hôm nay là chủ nhật, tranh thủ thời gian và cũng vì lâu quá không code thường xuyên, nay có dịp nên ngồi tạo một form đăng ký đơn giản để ôn lại kiến thức. Bắt đầu bằng cấu trúc các thành phần có trong form:
+[Source](https://github.com/haingdc/simple-form)
+
 ![c295a267ac8db702694bf29fae3224dd.png](/static/images/93638851-5a6c-4cd7-8532-4e820544ad3e/dd809d685bb14a3484550d21f391474e.png)
 
-Hôm nay là chủ nhật, tranh thủ thời gian và cũng vì lâu quá không code thường xuyên, nay có dịp nên ngồi tạo một form đăng ký đơn giản để ôn lại kiến thức. Bắt đầu bằng cấu trúc các thành phần có trong form:
 
 ```html
 <div class='registration'>
