get back old content

--- a/data/blog/xoay-vong-tron-chuoi-ki-tu.mdx
+++ b/data/blog/xoay-vong-tron-chuoi-ki-tu.mdx
@@ -10,10 +10,11 @@ summary:
 
 ![spinCircle.gif](/static/images/650aec46-fe0f-4f26-8dce-1ee0503f26c9/2379ac1449f743a19c6a5405743af00f.gif)
 
+
 Để xoay vòng từng thẻ ta sẽ sử dụng thuộc tính `transform`. Hiện tại, transform cung cấp các khả năng là translate, rotate, skew, scale. Ta sẽ sử dụng rotate để điều chỉnh góc của từng kí tự.
 
 ```css
-transform: rorate(60deg);
+transform: rorate(60deg)
 ```
 
 Với mỗi kí tự ta sẽ thiết lập `position: absolute` và qui định các giá top, right, bottom, left bằng 0 để mỗi kí tự có kích thước với với chính thẻ cha.
@@ -36,7 +37,7 @@ Tiếp theo ta sẽ tạo keyframes để tên là spinCircle:
 Ở thẻ cha ta sẽ sử dụng thuộc tính animation với giá trị là spinCircle:
 
 ```css
-animation: spinCircle 20s linear infinite;
+  animation: spinCircle 20s linear infinite;
 ```
 
 các giá trị đi kèm là linear và infinite để yêu cầu quá trình animation diễn ra ở nhịp đều đặn và lặp lại vô tận.
