Update git log command instruction for clarity on branch context

--- a/data/blog/git-commit-nham-len-nhanh-main.mdx
+++ b/data/blog/git-commit-nham-len-nhanh-main.mdx
@@ -29,7 +29,7 @@ git cherry-pick <comit-hash>
 Thay `<commit-hash>` bằng mã hash của commit mà bạn lỡ tay thực hiện. Một trong các cách để tìm ra mã hash là chạy
 
 ```terminal
-git log
+git log # chú ý chạy trên chính nhánh ta commit lộn là main để biết hash code
 ```
 
 3. Xoá commit khỏi nhánh `main`
