Cập nhật thẻ tags cho các bài viết về biểu đồ

--- a/data/blog/bieu-do-thanh-ly-do-hoc-tieng-anh.mdx
+++ b/data/blog/bieu-do-thanh-ly-do-hoc-tieng-anh.mdx
@@ -1,7 +1,7 @@
 ---
 title: Tạo biểu đồ thanh về lí do học tập của người học
 date: '2025-03-7'
-tags: ['luyện tập CSS']
+tags: ['luyện tập CSS', 'd3', 'chart', 'bar chart']
 draft: false
 summary:
 ---
