--- a/data/blog/bieu-do-thanh-muc-do-hai-long-cua-chu-vat-nuoi.mdx
+++ b/data/blog/bieu-do-thanh-muc-do-hai-long-cua-chu-vat-nuoi.mdx
@@ -1,7 +1,7 @@
 ---
 title: Tạo biểu đồ thanh về độ hài lòng của chủ vật nuôi
 date: '2025-03-11'
-tags: ['luyện tập css']
+tags: ['luyện tập css', 'd3', 'chart', 'bar chart']
 draft: false
 summary:
 ---
