--- a/data/blog/tao-form-dang-ky-voi-css.mdx
+++ b/data/blog/tao-form-dang-ky-voi-css.mdx
@@ -1,7 +1,7 @@
 ---
 title: Tạo form đơn giản
 date: '2025-02-9'
-tags: ['luyện tập css']
+tags: ['luyện tập css', 'form']
 draft: false
 summary: Tạo form đăng ký đơn giản bằng CSS
 ---
