--- a/data/blog/tao-lich-trinh-bang-css.mdx
+++ b/data/blog/tao-lich-trinh-bang-css.mdx
@@ -1,7 +1,7 @@
 ---
 title: Tạo lịch trình bằng CSS
 date: '2025-02-21'
-tags: ['luyện tập css']
+tags: ['luyện tập css', 'tabletao-lich-trinh-du-lich-5-ngay-bang-css']
 draft: false
 summary:
 ---
