--- a/data/blog/tao-lich-trinh-du-lich-5-ngay-bang-css.mdx
+++ b/data/blog/tao-lich-trinh-du-lich-5-ngay-bang-css.mdx
@@ -1,7 +1,7 @@
 ---
 title: Tạo lịch trình cho nhiều ngày bằng CSS
 date: '2025-03-5'
-tags: ['luyện tập CSS']
+tags: ['luyện tập CSS', 'table']
 draft: false
 summary:
 ---
