--- a/data/blog/xoay-vong-tron-chuoi-ki-tu.mdx
+++ b/data/blog/xoay-vong-tron-chuoi-ki-tu.mdx
@@ -1,7 +1,7 @@
 ---
 title: Xoay vòng tròn chuỗi kí tự
 date: '2025-02-4'
-tags: ['luyện tập css']
+tags: ['luyện tập css', 'animation', 'spin animation']
 draft: false
 summary:
 ---
