Cập nhật đường dẫn hình ảnh trong bài viết về biểu đồ hình tròn

--- a/data/blog/bieu-do-tron-ve-so-thich-cua-tre-em.mdx
+++ b/data/blog/bieu-do-tron-ve-so-thich-cua-tre-em.mdx
@@ -174,7 +174,7 @@ legendItems
 
 Vậy là ta đã hoàn thành 2 phần:
 
-![Screen Shot 2025-03-17 at 15.27.33.png](:/b4a4fb3b02ba4199830404c60bd3efc7)
+![Screen Shot 2025-03-17 at 15.27.33.png](/static/images/ec534319-fa7b-4baa-8109-10460e679076/f8782edf94e44baa9c2e0dbddd89a95e.png)
 
 Một điều nữa ta có thể làm ...
 
